git-annex (10.20251216) UNRELEASED; urgency=medium

  * Fix bug that could result in a tree imported from a remote containing
    missing git blobs.
  * fix: Populate unlocked pointer files in situations where a git command,
    like git reset or git stash, leaves them unpopulated.
  * Pass www-authenticate headers in to to git credential, to support
    eg, git-credential-oauth.
  * import: Fix display of some import errors.
  * external: Respond to GETGITREMOTENAME during INITREMOTE with the remote
    name.
  * When displaying sqlite error messages, include the path to the database.
  * webapp: Remove support for local pairing; use wormhole pairing instead.
  * git-annex.cabal: Removed pairing build flag, and no longer depends
    on network-multicast or network-info.
  * Remove support for building with old versions of persistent and 
    persistent-sqlite.
  * Removed support for building with ghc older than 9.6.6.
  * stack.yaml: Update to lts-24.26.

 -- Joey Hess <id@joeyh.name>  Thu, 01 Jan 2026 12:20:29 -0400

git-annex (10.20251215) upstream; urgency=medium

  * Added annex.trashbin configuration.
  * Added --presentsince, --lackingsince, and --changedsince file
    matching options.
  * Added TRANSFER-RETRIEVE-URL extension to the external special remote
    protocol.
  * S3: Remote can be configured with an x-amz-tagging header.
    (Needs aws-0.25)
  * S3: Support Google Cloud Storage
    (Needs aws-0.25.1)
  * S3: Support restore=yes, when used with storageclass=DEEP_ARCHIVE and
    similar. This is equivilant to the now deprecated Amazon Glacier.
    (Needs aws-0.25.2)
  * Add a build warning when the version of aws being built against is
    too old to support all features.
  * stack.yaml: Use aws-0.25.2.

 -- Joey Hess <id@joeyh.name>  Mon, 15 Dec 2025 13:23:29 -0400

git-annex (10.20251114) upstream; urgency=medium

  * p2p --pair: Fix to work with external P2P networks.
  * p2phttp: Significant robustness fixes for bugs that caused the 